--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: "config.gradle"
 
 buildscript {
     ext.kotlin_version = '1.2.30'
     repositories {
+        maven {url "http://maven.aliyun.com/nexus/content/groups/public/"}
+        maven { url "https://jitpack.io" }
         google()
         jcenter()
     }
@@ -17,6 +20,8 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {url "http://maven.aliyun.com/nexus/content/groups/public/"}
+        maven { url "https://jitpack.io" }
         google()
         jcenter()
     }
