--- a/config.gradle
+++ b/config.gradle
@@ -33,6 +33,7 @@ ext {
             okhttp3_logging      : "com.squareup.okhttp3:logging-interceptor:$android.okhttp3",
             glide                : 'com.github.bumptech.glide:glide:4.6.0',
             glide_transformations: 'jp.wasabeef:glide-transformations:3.0.1',
+            glide_compiler: 'com.github.bumptech.glide:compiler:4.6.0',
             room_runtime         : "android.arch.persistence.room:runtime:$android.room",
             room_compiler        : "android.arch.persistence.room:compiler:$android.room",
             room_rxjava2         : "android.arch.persistence.room:rxjava2:$android.room",
