封装room数据库、retrofit请求、glide框架

--- a/commonmodule/src/main/AndroidManifest.xml
+++ b/commonmodule/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.zzmeng.common">
 
     <application>
-        <activity android:name=".ui.activity.TestActivity"></activity>
+        <activity android:name=".ui.activity.TestActivity" />
     </application>
 
 </manifest>
