--- a/commonmodule/build.gradle
+++ b/commonmodule/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
@@ -24,30 +25,28 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation rootProject.ext.dependencies.appcompatV7
     implementation rootProject.ext.dependencies.constraint
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation rootProject.ext.dependencies.retrofit2
-    implementation rootProject.ext.dependencies.retrofit2_gson
-    implementation rootProject.ext.dependencies.retrofit2_rxjava2
+    api rootProject.ext.dependencies.retrofit2
+    api rootProject.ext.dependencies.retrofit2_gson
+    api rootProject.ext.dependencies.retrofit2_rxjava2
     implementation rootProject.ext.dependencies.persistentCookieJar
-    implementation rootProject.ext.dependencies.rxjava2
-    implementation rootProject.ext.dependencies.rxjava2_rxandroid
-    implementation rootProject.ext.dependencies.rxpermissions
-    implementation rootProject.ext.dependencies.okhttp3
+    api rootProject.ext.dependencies.rxjava2
+    api rootProject.ext.dependencies.rxjava2_rxandroid
+    api rootProject.ext.dependencies.rxpermissions
+    api rootProject.ext.dependencies.okhttp3
     implementation rootProject.ext.dependencies.okhttp3_logging
     api rootProject.ext.dependencies.glide
     api rootProject.ext.dependencies.glide_transformations
-    api rootProject.ext.dependencies.glide_compiler
+    annotationProcessor rootProject.ext.dependencies.glide_compiler
     implementation rootProject.ext.dependencies.room_runtime
-    implementation rootProject.ext.dependencies.room_compiler
     implementation rootProject.ext.dependencies.room_rxjava2
+    annotationProcessor rootProject.ext.dependencies.room_compiler
+    api rootProject.ext.dependencies.fastJson
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
 }
-
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
